plugins {
	id 'java'
	id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
	group = 'com.example'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	sourceCompatibility = JavaLanguageVersion.of(21)
	targetCompatibility = JavaLanguageVersion.of(21)

	dependencies {
		implementation platform('org.springframework.boot:spring-boot-dependencies:3.1.5')
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}

	test {
		useJUnitPlatform()
	}
}